# PYLib-JSON-Generator

./: .gitignore  CMakeLists.txt  README.md  config.cmake  fetch_requirements.txt  main.py  requirements.txt  settings.json.in
cmake/: FetchModules_JSONGEN.cmake  PythonSetup_JSONGEN.cmake  Tests_JSONGEN.cmake
src/: main.py  text_parser.py
tests/: test_suite_template_one.py  test_suite_template_two.py
